--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>College Fest 2025 - Registration</title>
-  <link rel="stylesheet" href="styletask5.css">
+  <link rel="stylesheet" href="TASK1.css">
 </head>
 <body>
     <div class="container">
